# ecg2sca

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  build_binary.sh  pyproject.toml  requirements.txt  run_ecg2sca.py
ecg2sca/: __init__.py  cli.py  features.py  ingest.py  median.py  predict.py
examples/: dummy_rhythm.xml
models/: lasso_logreg_bundle.joblib
tests/: test_self_check.py
